[package]
name = "editor-command"
description = "TODO"
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
repository = "https://github.com/LucasPickering/editor-command"
version = "0.1.0"
edition = "2021"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.76.0"

[dependencies]
shellish_parse = "2.2.0"
thiserror = "1.0.63"

[dev-dependencies]
env-lock = "0.1.0"
rstest = { version = "0.22.0", default-features = false }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [{{version}}] - {{date}}" },
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "LucasPickering/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false
