[package]
name = "editor-command"
description = "Open files in a user's configured editor"
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
repository = "https://github.com/LucasPickering/editor-command"
version = "0.1.0"
edition = "2021"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
# TODO downgrade
rust-version = "1.76.0"

[dependencies]
shellish_parse = "2.2.0"
thiserror = "1.0.63"

[dev-dependencies]
env-lock = "0.1.0"

[workspace.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [{{version}}] - {{date}}" },
]
